--- a/sat_qazan/src/components/Main/MainComponents/Category/Category.css
+++ b/sat_qazan/src/components/Main/MainComponents/Category/Category.css
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: column;
     align-items:center ;
-    color: white;
+    color: rgb(8, 8, 8);
     margin-bottom: 20px;
     padding:0 10px;
   }
