--- a/sat_qazan/src/components/Main/MainComponents/About/About.css
+++ b/sat_qazan/src/components/Main/MainComponents/About/About.css
@@ -3,46 +3,28 @@
     width: 100%;
     background-color: #3dd4c3; 
     color: white;
-    margin-top: 30px;
+    margin-top: 10px;
     font-family: "poppins";
 }
 .advantages>div{
     width: 90%;
-    margin:70px auto 0 auto;
+    margin:40px auto 0 auto;
 }
 .advantages .title{
     font-size: 45px;
     text-align: center; 
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 .advantages .info{
     display: flex;
-    justify-content:space-around ;
+    /* justify-content:space-around ; */
     width:100% ;
-
+    font-style: italic;
 }
-.advantages .infoContainers{
-    margin: 10px;
-}
-.advantages .infoContainersIcon{
-    width: 150px;
-    height: 160px;
-    background-color: #fff;
-    border: 1px solid hsla(0, 0%, 65%, 0.158);
-    box-shadow: 0 0 36px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    backdrop-filter: blur(30px);
-    padding: 1rem;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    z-index: 100;
-}
-.advantages .infoContainersInfo{
-   color: black;
-    width: 100%;
-    text-align: center;
+.advantages .info p{
+    padding-left: 10px ;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 /* RULES */
 .rules{
@@ -154,6 +136,9 @@
     }
 }
 @media(max-width:750px){
+    .advantages .infoContainersIcon{
+        width: 100px;
+        height: 110px;}
     .rulesBtns button{
         padding: 20px 25px;
         font-size: 15px;
@@ -180,7 +165,7 @@
        flex-wrap: wrap;
     }
     .advantages .title{
-        font-size: 25px;
+        font-size: 30px;
     }
 }
 @media (max-width:500px){
