--- a/sat_qazan/src/components/Main/MainComponents/About/About.css
+++ b/sat_qazan/src/components/Main/MainComponents/About/About.css
@@ -15,6 +15,11 @@
     text-align: center; 
     padding-bottom: 10px;
 }
+.advantages .title img{
+    border-radius: 10px;
+width: 150px;
+}
+
 .advantages .info{
     display: flex;
     /* justify-content:space-around ; */
@@ -46,6 +51,8 @@
     flex-direction: column;
     align-items: center;
     margin: 20px;
+    font-family: "poppins";
+    font-size: 20px;
 }
 .rulesBtns{
     display: flex;
@@ -168,6 +175,9 @@
     .advantages .title{
         font-size: 30px;
     }
+    .rulesInfo{
+        font-size: 15px;
+    }
 }
 @media (max-width:500px){
     .Header >div b:nth-child(1){
@@ -182,5 +192,8 @@
     .Header >div{
         top: 10px;
         right: 5px;
+    }
+    .rulesInfo{
+        font-size: 12px;
     }
 }
