--- a/sat_qazan/src/components/Main/MainComponents/Category/Category.css
+++ b/sat_qazan/src/components/Main/MainComponents/Category/Category.css
@@ -59,8 +59,13 @@
     align-items:center ;
     color: rgb(8, 8, 8);
     margin-bottom: 20px;
+    margin-top: 20px;
     padding:0 10px;
   }
-  .Info-SatQazan p{
+  .Info-SatQazan p:nth-child(2){
 opacity: 0.7;
+font-size: 22px;
+  }
+  .Info-SatQazan b:nth-child(3){
+    font-size: 22px;
   }
