--- a/sat_qazan/src/components/Main/MainComponents/Contact/Contact.css
+++ b/sat_qazan/src/components/Main/MainComponents/Contact/Contact.css
@@ -184,10 +184,10 @@
   
   
   @media (max-width: 991px) {
-    section {
+    /* section {
       padding-top: 50px;
       padding-bottom: 50px;
-    }
+    } */
   
     .row {
       flex-direction: column;
