--- a/sat_qazan/src/components/Main/MainComponents/About/AboutHeader/AboutHeader.css
+++ b/sat_qazan/src/components/Main/MainComponents/About/AboutHeader/AboutHeader.css
@@ -35,19 +35,12 @@
     color: #fff;
 }
 /* HEADER MEDIA */
-@media(max-width:1125px){
-    .Header >div b:nth-child(1){
-        font-size: 25px;
-    }
-    .Header >div b:nth-child(3){
-        font-size: 20px;}
-        .Header >div p{
-            color: #fff;
-            font-size: 15px;
-        }
-    .Header >div{
-        right: 30px;
-    }
+@media(min-width:1125px){
+   .Header{
+    box-shadow: 0 0 36px 1px rgba(0, 0, 0, 0.5);
+    width: 80%;
+    border-radius: 30px;
+   }
 }
 @media(max-width:880px){
     .Header >div b:nth-child(1){
